@@ -34,5 +34,4 @@ run: war
 	$(call NOTE, Running Jetty for Tutorial ...)
 	$(call EXEC_JAVA,$(EXEC_CLASSPATH), \
 		-showversion \
-		-Dorg.xml.sax.parser=org.apache.xerces.parsers.SAXParser \
 		com.mortbay.Jetty.Server jetty.xml)
